# AIDD-30-Day-Challenge

./: .gitignore  main.py  pyproject.toml  readme.md
specs/001-calculator-expression/: plan.md  spec.md
task_2/: readme.md
task_3/: readme.md
task_4/gemini-mini-task/: .env  agent.py  app.py  gemini.md  pyproject.toml  tools.py
task_4/gemini-mini-task/.gemini/: settings.json
task_4/study-notes-app/: README.md  app.py  gemini.md  pyproject.toml  requirements.txt
task_4/study-notes-app/.gemini/: settings.json
task_4/study-notes-app/modules/: extractor.py  quiz_mcq.py  quiz_mixed.py  summarizer.py
task_5/: readme.md
task_6/: README.md  main.py  pyproject.toml
task_6/.gemini/: settings.json
task_7/: README.md  main.py  pyproject.toml
task_8/: main.py  pyproject.toml
task_8/calculator/: main.py
task_8/calculator/.claude/: settings.local.json
task_8/calculator/.specify/memory/: constitution.md
task_8/calculator/calculator/: parser.py  test_parser.py
task_8/calculator/specs/001-calculator-expression/: spec.md
task_8/calculator/specs/calculator-expression/: data-model.md  plan.md  quickstart.md  research.md  spec.md
task_9_and_10/: README.md  main.py  pyproject.toml
task_9_and_10/.claude/agents/: book-editor.md  book-formatter.md  book-researcher.md  book-writer.md  main-book-orchestrator.md
task_9_and_10/.claude/skills/Grammar and Style Enhancer/: skill.md
task_9_and_10/.claude/skills/Research and Fact-Checking Tool/: skill.md
task_9_and_10/.claude/skills/chapter-outline/: skill.md
task_9_and_10/.claude/skills/plot-checker/: SKILL.md
(+7 files in other folders)
